--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
     <div class="container">
-        hii
+        <div class="main-body">
+            
+        </div>
     </div>
 </body>
 </html>
